update docs, run verb

--- a/.verb.md
+++ b/.verb.md
@@ -4,5 +4,8 @@
 var utils = require('{%= name %}');
 ```
 
-Includes the following utility method from [handlebars][]:
+Includes the following utility methods:
 {%= methods("./") %}
+
+## API
+{%= apidocs("index.js") %}
